# TrustVerify

./: .gitignore  README.md  registry.json  signed_registry.json
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  history.rs  lib.rs  main.rs  parser.rs  quote_fetcher.rs  registry.rs  verifier.rs
docs/: 5_DAY_BUILD_PLAN.md  BUILD_GUIDE.md  DEMO_SCRIPT.md  MANUAL_TEST_CHECKLIST.md  PROJECT_DOCUMENTATION.md  README.md  RESOURCES.md  SAMPLE_QUOTES_GUIDE.md
frontend/: .gitignore  CODE_EXPLAINER.md
frontend/src/app/: layout.tsx  page.tsx
samples/: README.md  real_gcp_tdx.hex  trusted.hex  unknown.hex
scripts/: integration_test.sh
