[package]
name = "trustverify"
version = "0.1.0"
edition = "2021"
description = "PPID Verification Dashboard - Parse TEE attestations and verify against provider registry"

[lib]
name = "trustverify"
path = "src/lib.rs"

[[bin]]
name = "trustverify"
path = "src/main.rs"

[[bin]]
name = "registry_sign"
path = "src/bin/registry_sign.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
